--- a/style/style.css
+++ b/style/style.css
@@ -1,18 +1,20 @@
 .poppins-medium {
     font-family: "Poppins", serif;
     font-weight: 500;
-    font-style: normal;
   }
   
   .poppins-semibold {
     font-family: "Poppins", serif;
     font-weight: 600;
-    font-style: normal;
   }
   
   .poppins-extrabold {
     font-family: "Poppins", serif;
     font-weight: 800;
-    font-style: normal;
   }
+  .anton-regular {
+    font-family: "Anton", sans-serif;
+    font-weight: 400;
+  }
+  
   
